--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -160,6 +160,10 @@ body.fixed-nav {
   min-height: 300px;
   background: #f4f6f9;
 }
+.cont-wrapper {
+  min-height: 92vh !important;
+  padding-top: 2rem;
+}
 
 /*------------------------------------
 header
@@ -660,7 +664,7 @@ left nav
 
 @media (min-width: 992px) {
   #mainNav.fixed-top .left-side-nav {
-      height: calc(100vh - 123px);
+      height: 100vh;
       border-right: 1px solid #e5e8eb;
       box-shadow: 0 1px 10px 1px rgba(0, 0, 0, .05);
   }
