--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -667,6 +667,7 @@ left nav
       height: calc(100vh - 143px);
       border-right: 1px solid #e5e8eb;
       box-shadow: 0 1px 10px 1px rgba(0, 0, 0, .05);
+      background: #fff;
   }
   #mainNav.fixed-top .left-side-nav .nav-link i {
       position: relative;
@@ -4185,4 +4186,7 @@ div.spinner-container {
 .profile-image-loader svg {
   height: 85px;
   width:85px;
+}
+.profile-information svg {
+  width: 200px;
 }
